12/24/2005 Bob Rossi <bob@brasko.net>

	* RELEASE_TODO: Update.

12/20/2005 Bob Rossi <bob@brasko.net>

	* NEWS: Fixed a CGDB bug.

12/20/2005 Bob Rossi <bob@brasko.net>

	* NEWS: Add note about initial file and line discovery.
	* RELEASE_TODO: Update.

11/26/2005 Bob Rossi <bob@brasko.net>

	* RELEASE_TODO: Update.

11/23/2005 Bob Rossi <bob@brasko.net>

	* RELEASE_TODO: Update.

11/23/2005 Bob Rossi <bob@brasko.net>

	* RELEASE_TODO: Update.

11/23/2005 Bob Rossi <bob@brasko.net>

	* RELEASE_TODO: Update.

11/23/2005 Bob Rossi <bob@brasko.net>

	* RELEASE_TODO: Rearrange items.

11/23/2005 Bob Rossi <bob@brasko.net>

	* RELEASE_TODO: Finish task for .6.0

11/21/2005 Bob Rossi <bob@brasko.net>

	* configure.in: Update to have -lreadline before -lncurses
	* configure: Autogenerated.

11/20/2005 Bob Rossi <bob@brasko.net>

	* RELEASE_TODO: Update with long list of .6.0 items.

11/12/2005 Bob Rossi <bob@brasko.net>

	* RELEASE_TODO: Update todo.

10/06/2005 Bob Rossi <bob@brasko.net>

	* README: Added a small description about control flow.
	* NEWS: Add note about control flow being supported.

09/30/2005 Bob Rossi <bob@brasko.net>

	* NEWS: Update for line continuation compatibility.

09/30/2005 Bob Rossi <bob@brasko.net>

	* NEWS: Update for linking diretly to readline.
	* configure.in: Only allow readline version 5.1.
	Remove the rlctx interface and add the rline interface.
	* configure: Autogenerated.
	* various/Makefile.am (SUBDIRS): Changed rlctx to rline.
	* various/Makefile.in: Autogenerated.

09/12/2005 Bob Rossi <bob@brasko.net>

   * NEWS: Update with syntax bug fix.

08/12/2005 Bob Rossi <bob@brasko.net>

	* RELEASE_TODO: Add item for next release.

08/10/2005 Bob Rossi <bob@brasko.net>

	* configure.in (RL_LIB_READLINE_VERSION): Detect 4.2a as OK.
	(AM_INIT_AUTOMAKE): Version update.
	* configure: Autogenerated.
	* NEWS: Update fix info.

version 0.5.3 (08/08/2005):

08/08/2005 Bob Rossi <bob@brasko.net>
