@@ -1,3 +1,7 @@
+12/25/2005 Bob Rossi <bob@brasko.net>
+
+	* RELEASE_TODO: Update.
+
 12/24/2005 Bob Rossi <bob@brasko.net>
 
 	* RELEASE_TODO: Update.
